fixing the weird left align falling into the shuffle button

--- a/src/pages/generator/index.module.scss
+++ b/src/pages/generator/index.module.scss
@@ -144,7 +144,7 @@ ul {
   font-weight: 900;
   text-transform: uppercase;
   font-size: 2.5rem;
-  margin-left: 1rem;
+  margin-left: 4rem;
   overflow-wrap: break-word;
   display: block;
 
